color: Fix a crash if ~/.local is deleted at runtime

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=660664